Fix: Fix the problem of button covered by site header when brower screen size changes

--- a/src/components/savedDrawer/index.scss
+++ b/src/components/savedDrawer/index.scss
@@ -1,9 +1,9 @@
 .toggle-btn {
   position: fixed;
-  color: red;
   width: 1rem;
   height: 1rem;
-  top: 1rem;
+  top: 20rem;
+  z-index: 99;
   text-align: center;
 }
 
